--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
          <a href="https://maps.app.goo.gl/351H3Cauu9Xvvi8u8" target="_blank">
             <div class="venue">SEE THE VENUE <i class='bx bx-right-arrow-alt'></i></div>
          </a>
-         <a href="invitation/RwedsV Invitation.gif"
+         <a href="invitation/RwedsV Invitation.jpeg"
             download="Invitation | 11 July | Hope to see you there!" target="_blank">
             <div class="venue">DOWNLOAD INVITATION <i class='bx bx-right-arrow-alt'></i></div>
          </a>
