--- a/index.html
+++ b/index.html
@@ -36,9 +36,16 @@
 
    <div class="wrap">
       <div class="title">
-         <h1 class="rajat">Rajat</h1>
-         <img src="assets/img/wedding_couple.png" alt="ring-icon" class="gif">
-         <h1 class="vastu">Vastu</h1>
+	<div class="container_imgtext">
+		<div class="image">
+			<img src="assets/img/wedding_couple.png" alt="-icon" class="gif">
+		</div>
+		<div class="text">
+			<h1 class="rajat">Rajat</h1>
+			<h1>&</h1>
+			<h1 class="vastu">Vastu</h1>
+		</div>
+	</div>
          <div class="home_txt">
             <h3>Are getting married</h3>
             <p>
