--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
    <link rel="shortcut icon" href="favicon.png" type="image/png">
-   <meta name="description" content="With the divine grace of the almighty, inviting you and your family to Rajat & Vastu's wedding to be held on July 11 at Jangid Bhawan, Akola from 7:00 PM onwards.">
+   <meta name="description" content="With the divine grace of the almighty, inviting you and your family to Rajat & Vastu's wedding to be held on July 11 at Hotel Kamla Palace, Shivpuri, M.P. from 7:00 PM onwards.">
    <meta name="author" content="Rajat">
    <meta property="og:type" content="website" />
    <meta name="theme-color" content="#6e57e0">
    <meta property="og:title" content="Rajat & Vastu's Wedding Celebration | July 11" />
-   <meta property="og:description" content="With the divine grace of the almighty, inviting you and your family to Rajat & Vastu's wedding to be held on July 11 at Jangid Bhawan, Akola from 7:00 PM onwards." />
+   <meta property="og:description" content="With the divine grace of the almighty, inviting you and your family to Rajat & Vastu's wedding to be held on July 11 at Hotel Kamla Palace, Shivpuri, M.P. from 7:00 PM onwards." />
    <meta property="og:image" content="https://res.cloudinary.com/dytbosrbw/image/upload/v1699241763/Rajat_Vastu-Wedding-Celebration_ewxofb.png" />
-   <meta property="og:url" content="https://ra-vastu-wedding-invite.web.app/" />
    <meta property="og:site_name" content="Rajat & Vastu's Wedding Celebration | July 11" />
    <meta name="twitter:card" content="website">
    <meta name="twitter:site" content="Rajat & Vastu's Wedding Celebration | July 11">
