--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div class="title">
 	<div class="container_imgtext">
 		<div class="image">
-			<img src="assets/img/wedding_couple.png" alt="-icon" class="gif">
+			<img src="assets/img/wedding_couple.png" alt="couple-icon" class="gif">
 		</div>
 		<div class="text">
 			<h1 class="rajat">Rajat</h1>
