--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
          <tbody class="responsive-table__body">
 			<tr class="responsive-table__row">
                <td class="responsive-table__body__text responsive-table__body__text--name">Haldi-Mehndi </td>
-               <td class="responsive-table__body__text responsive-table__body__text--country">July 10, 2024, 04:00 PM
+               <td class="responsive-table__body__text responsive-table__body__text--country">July 10, 2024, 11:00 AM
                </td>
             </tr>
 			
