--- a/index.html
+++ b/index.html
@@ -93,6 +93,13 @@
          </tbody>
       </table>
    </div>
+<!--=============== Save the Date ===============-->
+   <div class="tile__img">
+         <img class="tile__img" src="./assets/img/ggg.gif" alt=""  />
+   </div>
+   <div class="title">
+	<h2 class="rajat">11 July, 2024</h2>
+    </div>
 
    <!--=============== time ===============-->
    <div id="time" class="time"></div>
