--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	<p><h2><u>।। श्री गणेशाय नमः ।।</u></h2></p>
 	<div class="container_imgtext">
 		<div class="image">
-			<img src="assets/img/wedding_couple.png" alt="couple-icon">
+			<img src="assets/img/wedding_couple.png" alt="couple-icon" class=".gif">
 		</div>
 		<div class="text">
 			<h1 class="rajat">Rajat</h1>
