--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		</div>
 		<div class="text">
 			<h1 class="rajat">Rajat</h1>
-			<h1>&</h1>
+			<h1 class="and">&</h1>
 			<h1 class="vastu">Vastu</h1>
 		</div>
 	</div>
