--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
    <div class="wrap">
       <div class="title">
-	<p><h2>।। Shree Ganeshay Namah ।।</h2></p>
+	<p><h2>!! Shree Ganeshay Namah !!</h2></p>
 	<div class="container_imgtext">
 		<div class="image">
 			<img src="assets/img/wedding_couple.png" alt="couple-icon" class="gif">
