--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
                </td>
             </tr>
 			<tr class="responsive-table__row">
-               <td class="responsive-table__body__text responsive-table__body__text--name">Tilak Faldaan  </td>
+               <td class="responsive-table__body__text responsive-table__body__text--name">Tilak-Faldaan & Ring Ceremony  </td>
                <td class="responsive-table__body__text responsive-table__body__text--country">July 11, 2024, 12:00 PM
                </td>
             </tr>
             <tr class="responsive-table__row">
-               <td class="responsive-table__body__text responsive-table__body__text--name">Baarat </td>
+               <td class="responsive-table__body__text responsive-table__body__text--name">Baarat & Reception </td>
                <td class="responsive-table__body__text responsive-table__body__text--country">July 11, 2024, 07:00 PM
                </td>
             </tr>
