--- a/index.html
+++ b/index.html
@@ -143,10 +143,10 @@
 
 
    <!--=============== bottom ===============-->
-   <div class="footer">
+   <!--<div class="footer">
       <p>Built with love by
             <span> RS </span></p>
-   </div>
+   </div>-->
 
 
    <!--=============== floating button ===============-->
