--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <div class="venue">SEE THE VENUE <i class='bx bx-right-arrow-alt'></i></div>
          </a>
          <a href="invitation/RV Wedding Invitation.pdf"
-            download="Invitation | 11 July | Hope to see you there!" target="_blank">
+            download="Rajat & Vastu Wedding Invitation | 11 July" target="_blank">
             <div class="venue">DOWNLOAD INVITATION <i class='bx bx-right-arrow-alt'></i></div>
          </a>
       </div>
