--- a/index.html
+++ b/index.html
@@ -120,6 +120,12 @@
       </div>
    </div>
 
+<div class="video-container">
+	<video width="640" height="4800" controls>
+  		<source src="RVInvitation.mp4" type="video/mp4">
+	</video>
+</div>
+
    <!--=============== CTA ===============-->
    <p class="CTA">
       Can't wait to celebrate auspicious moment of our family with you! <br>
