--- a/index.html
+++ b/index.html
@@ -120,8 +120,9 @@
       </div>
    </div>
 
+<!-- Invitation Video -->
 <div class="video-container">
-	<video width="640" height="4800" controls>
+	<video width="640" height="480" controls>
   		<source src="RVInvitation.mp4" type="video/mp4">
 	</video>
 </div>
