--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 <!-- Invitation Video -->
 <div class="video-container">
 	<video width="640" height="480" controls>
-  		<source src="RVInvitation.mp4" type="video/mp4">
+  		<source src="invitation/RVInvitation.mp4" type="video/mp4">
 	</video>
 </div>
 
