--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 <br>
 <br>
 <div class="video-container">
-	<video width="480" height="640" controls>
+	<video width="320" height="480" controls autoplay muted>
   		<source src="invitation/RVInvitation.mp4" type="video/mp4">
 	</video>
 </div>
