--- a/index.html
+++ b/index.html
@@ -98,9 +98,8 @@
 
 <!-- Invitation Video -->
 <br>
-<br>
 <div class="video-container">
-	<video width="320" height="480" controls autoplay muted>
+	<video width="320" height="480" autoplay muted>
   		<source src="invitation/RVInvitation.mp4" type="video/mp4">
 	</video>
 </div>
