--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 <!-- Invitation Video -->
 <br>
 <div class="video-container">
-	<video width="320" height="480" autoplay muted>
+	<video width="320" height="480" loop autoplay muted>
   		<source src="invitation/RVInvitation.mp4" type="video/mp4">
 	</video>
 </div>
