--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                </td>
             </tr>
 			<tr class="responsive-table__row">
-               <td class="responsive-table__body__text responsive-table__body__text--name">Tilak-Faldaan & Ring Ceremony  </td>
+               <td class="responsive-table__body__text responsive-table__body__text--name">Ring Ceremony  </td>
                <td class="responsive-table__body__text responsive-table__body__text--country">July 11, 2024, 12:00 PM
                </td>
             </tr>
@@ -94,6 +94,13 @@
          </tbody>
       </table>
    </div>
+
+<!-- Invitation Video -->
+<div class="video-container">
+	<video width="320" height="480" loop autoplay muted>
+  		<source src="invitation/RVInvitation.mp4" type="video/mp4">
+	</video>
+</div>
 
 <!--=============== Save the Date ===============-->
    <div class="tile__img">
