--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
    </div>
 
 <!-- Invitation Video -->
-<div class="video-container">
+<div>
 	<video width="320" height="480" loop autoplay muted>
   		<source src="invitation/RVInvitation.mp4" type="video/mp4">
 	</video>
